fixed input line wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -39,8 +39,12 @@ html, body {
 	width: 100%;
 }
 
-.content {
+.content, input {
 	-webkit-box-flex: 1;
+	display: -webkit-box;
+	-webkit-box-orient: horizontal;
+	-webkit-box-align: stretch;
+	width: 100%;
 }
 
 .prefix {
@@ -73,6 +77,7 @@ div#flash-notif {
 	position: fixed;
 	top: 50%;
     left: 50%;
+	
     -ms-transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
